--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@ header nav ul a li {
 #hero {
     position: relative;
     width: 100%;
-    background-image: url('./media_photos/index/beach-huts-hero-dark.jpg');
+    background-image: url('./media/media_photos/index/beach-huts-hero-dark.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -63,4 +63,25 @@ header nav ul a li {
     color: #d9f0ed;
     padding: 0 0 2rem 0;
     margin: 0;
+}
+
+footer {
+    background-color: #2a959d;
+    text-align: center;
+    color: #d9f0ed;
+    margin: 1rem 0 0 0;
+    padding: 1rem;
+}
+
+#footer-logo {
+    width: 75%;
+    padding: 1rem;
+}
+
+#social-media-icons img {
+    padding: 1rem;
+}
+
+h2 {
+    color: #2a959d;
 }
