--- a/css/index.css
+++ b/css/index.css
@@ -2,10 +2,65 @@
     display: grid;
     grid-template-columns: 1fr;
     margin: 1rem;
+}
+
+#escape-paradise p {
     text-align: center;
+    padding-bottom: 0.5rem;;
 }
 
 #escape-paradise img {
     width: 100%;
     height: auto;
+    border-radius: 1rem 1rem 0 0;
+}
+
+#escape-paradise a button {
+    margin: 0;
+    border-radius: 0 0 1rem 1rem;
+}
+
+#info-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    margin: 1rem;
+    gap: 1rem;
+}
+
+#info-grid h2 {
+    padding-bottom: 0.5rem;
+}
+
+.info-cells {
+    background-color: #d9f0ed;
+    border: 3px solid #2a959d;
+    border-radius: 30px;
+    padding: 1rem;
+    margin: 0;
+}
+
+.info-cells img {
+    width: 20%;
+}
+
+#home-rooms h2 {
+    margin: 0 1rem;
+    padding-top: 0.5rem;
+}
+
+.home-room-grid {
+    margin: 1rem;
+    background-color: #d9f0ed;
+    border-radius: 1rem;
+}
+
+.home-room-grid img {
+    width: 100%;
+    height: auto;
+    border-radius: 1rem 1rem 0 0;
+}
+
+.home-room-grid figcaption {
+    padding: 0 1rem 1rem 1rem;
 }
