--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ header nav ul a li {
     text-align: center;
     font-size: 200%;
     color: #d9f0ed;
-    padding: 0 0 2rem 0;
+    padding: 0 1rem 2rem 1rem;
     margin: 0;
 }
 
@@ -84,6 +84,8 @@ footer {
 h2 {
     color: #2a959d;
     text-align: center;
+    padding: 3rem 0 0 0;
+    margin: 0;
 }
 
 p {
@@ -92,10 +94,14 @@ p {
 
 button {
     width: 100%;
-    background-color: #ff6b6b;
     padding: 1rem;
-    border: none;
-    border-radius: 4rem;
+    background-color: #ff6b6b;
     color: #ffffff;
+    border: none;
+    border-radius: 1rem;
     font-size: 120%;
+}
+
+button:hover {
+    cursor: pointer;
 }
