--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-    padding: 1rem 0;
+    padding: 0 0 1rem 0;
     background-color: #21295c;
     text-align: center;
 }
@@ -54,9 +54,23 @@ header nav ul a li:hover {
 }
 
 #weather-banner {
-    margin: 0 0 -1rem 0;
-    padding: 1rem;
-    background-color: #D3FFBD
+    margin: 0 0 2rem 0;
+    padding: 0 1rem;
+    background-color: #D3FFBD;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#weather-banner img {
+    margin: 0.5rem;
+    padding: 0;
+    max-width: 3rem;
+    align-self: center;
+    border: 2px solid #21295c;
+    border-radius: 50rem;
 }
 
 footer {
