--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ header nav ul a li:hover {
 }
 
 #weather-banner img {
-    margin: 0.5rem;
+    margin: 0 1rem;
     padding: 0;
     max-width: 3rem;
     align-self: center;
