--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,7 @@ footer {
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
+    justify-items: center;
     text-align: center;
 }
 
