--- a/css/about.css
+++ b/css/about.css
@@ -22,14 +22,33 @@
     margin: 0;
 }
 
-.guidelines {
+#guidelines {
     margin: 1rem;
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
 }
 
-.guidelines img {
+#guidelines img {
     width: 100%;
     height: auto;
+}
+
+#weather-icons {
+    margin: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 0.5rem;
+}
+
+#weather-icons h2 {
+    grid-column: span 3;
+}
+
+#weather-icons p {
+    grid-column: span 3;
+}
+
+#weather-icons img {
+    width: 80%;
 }
