--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,6 @@
 .hero {
+    margin: 0;
+    padding: 1rem;
     position: relative;
     width: 100%;
     background-image: url('../media/media_photos/index/beach-huts-hero-dark.jpg');
@@ -6,7 +8,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
-    margin: 0;
+    border-bottom: 10px solid #D3FFBD;
 }
 
 .hero img {
@@ -15,11 +17,11 @@
 }
 
 .hero h1 {
+    margin: 0;
+    padding: 0 1rem 2rem 1rem;
     text-align: center;
     font-size: 200%;
     color: #fff7f7;
-    padding: 0 1rem 2rem 1rem;
-    margin: 0;
 }
 
 #guidelines {
