--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
 
 .hero img {
     padding: 1rem;
-    width: 25%;
+    max-width: 25%;
 }
 
 .hero h1 {
@@ -46,6 +46,10 @@
     border-radius: 0 0 1rem 1rem;
 }
 
+#ep-left {
+    padding: 0 2rem;
+}
+
 #info-grid {
     margin: 1rem;
     gap: 1rem;
@@ -58,11 +62,6 @@
     padding-bottom: 0.5rem;
 }
 
-.info-cells {
-    margin: 0;
-    padding: 1rem;
-}
-
 .info-cells img {
     padding: 7.5%;
     max-width: 30%;
@@ -73,26 +72,28 @@
 }
 
 .info-cells h3 {
-    margin: 1rem 0 0.5rem 0;
+    margin: 0;
+    padding: 0.5rem;
 }
 
 .info-cells p {
-    margin: 0 1rem;
+    margin: 0;
 }
 
 #home-rooms {
-    margin: 1rem;
-    gap: 1rem;
+    margin: 0 1rem;
+    gap: 2rem;
     display: grid;
     grid-template-columns: 1fr;
     place-items: center;
 }
 
 #home-rooms h2 {
-    margin-bottom: 0.5rem;
+    margin: 0;
 }
 
 .home-room-grid {
+    height: 100%;
     margin: 0;
     background-color: #21295c;
     border-radius: 1rem;
@@ -124,7 +125,8 @@
 }
 
 #home-testimonial-grid {
-    margin: 1rem;
+    width: 75%;
+    margin: auto;
     gap: 1rem;
     display: grid;
     grid-template-columns: 1fr;
@@ -133,6 +135,7 @@
 
 .testimonial {
     margin: 0;
+    height: 100%;
     border: 2px solid #21295c;
     border-radius: 1rem;
 }
@@ -150,4 +153,125 @@
     margin: 0;
     padding: 1rem;
     border-radius: 0 0 0.5rem 0.5rem;
+}
+
+@media only screen and (min-width: 660px) {
+    #escape-paradise img {
+        aspect-ratio: 16 / 9;
+        object-fit: cover;
+    }
+
+    #info-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    #info-grid h2 {
+        grid-column: span 2;
+    }
+
+    #home-rooms {
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    #home-rooms h2 {
+        grid-column: span 2;
+    }
+    
+    #home-rooms :nth-child(2) {
+        grid-column: span 2;
+        width: 100%;
+    }
+    
+    #home-rooms :nth-child(2) img {
+        aspect-ratio: 16 / 5;
+        object-fit: cover;
+    }
+
+    #home-rooms a {
+        grid-column: span 2;
+    }
+
+    #home-testimonial-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    #home-testimonial-grid h2 {
+        grid-column: span 2;
+    }
+    
+    #home-testimonial-grid a {
+        grid-column: span 2;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    
+    .hero img {
+        max-width: 15%;
+    }
+
+    #escape-paradise {
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        gap: 1rem;
+    }
+
+}
+
+@media only screen and (min-width: 1200px) {
+
+    #escape-paradise img {
+        aspect-ratio: 16 / 7;
+        object-fit: cover;
+    }
+
+    #info-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 0;
+    }
+    
+    #info-grid h2 {
+        grid-column: span 4;
+    }
+
+    #info-grid img {
+        padding: 10%;
+        max-width: 30%;
+        min-width: 10rem;
+    }
+
+    #home-rooms {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    
+    #home-rooms h2 {
+        grid-column: span 3;
+    }
+    
+    #home-rooms :nth-child(2) {
+        grid-column: span 1;
+        width: 100%;
+    }
+    
+    #home-rooms :nth-child(2) img {
+        aspect-ratio: auto;
+        object-fit: cover;
+    }
+
+    #home-rooms a {
+        grid-column: span 3;
+    }
+
+}
+
+@media only screen and (min-width: 1500px) {
+    
+    #escape-paradise {
+        padding: 0 20rem;
+    }
+    
+    #ep-right {
+        width: 75%;
+        margin: auto;
+    }
 }
