--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,20 @@ body {
     background-color: #fff7f7;
 }
 
+main {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+}
+
 header {
+    margin: 0;
     padding: 0 0 1rem 0;
     background-color: #21295c;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header img {
@@ -26,13 +36,14 @@ header img {
 
 header nav {
     padding: 1rem;
+    width: 100%;
 }
 
 header nav ul {
     padding: 0;
     list-style: none;
-    display: grid;
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
     gap: 1rem;
 }
 
@@ -44,6 +55,7 @@ header nav ul a {
 }
 
 header nav ul a li {
+    margin: auto;
     padding: 0.75rem;
     background-color: #fff7f7;
     border-radius: 0.5rem;
@@ -54,9 +66,8 @@ header nav ul a li:hover {
 }
 
 #weather-banner {
-    margin: 0 0 2rem 0;
+    margin: 0 0 1rem 0;
     padding: 0 1rem;
-    background-color: #D3FFBD;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -64,24 +75,27 @@ header nav ul a li:hover {
     text-align: center;
 }
 
+#weather-banner p {
+    color: #D3FFBD
+}
+
 #weather-banner img {
     margin: 0 1rem;
     padding: 0;
     max-width: 3rem;
     align-self: center;
-    border: 2px solid #21295c;
+    border: 2px solid #D3FFBD;
     border-radius: 50rem;
 }
 
 footer {
-    margin: 1rem 0 0 0;
+    margin: 2rem 0 0 0;
     padding: 1rem;
     background-color: #21295c;
     color: #fff7f7;
-    display: grid;
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-items: center;
     text-align: center;
 }
 
@@ -96,11 +110,18 @@ footer p {
     width: 75%;
 }
 
+#footer-logo-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 footer ul {
     padding: 0;
     list-style: none;
-    display: grid;
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 1rem;
 }
 
@@ -137,8 +158,7 @@ footer ul a li {
 }
 
 h2 {
-    padding: 2rem 0 0 0;
-    margin: 0;
+    margin: 1rem;
     color: #21295c;
     text-align: center;
 }
@@ -178,4 +198,62 @@ button:hover {
 
 .floating-button button:hover {
     transform: scale(1.025);
+}
+
+@media only screen and (min-width: 768px) {
+
+    header nav {
+        padding: 0;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content:space-between;
+        align-items: center;
+    }
+    
+    header nav img {
+        padding: 0;
+        margin: 0 1rem;
+        width: 20%;
+        height: auto;
+    }
+
+    header nav ul {
+        flex-direction: row;
+    }
+
+    header nav ul a {
+        font-size: 85%;
+        color: #fff7f7
+    }
+    
+    header nav ul a:hover {
+        color: #D3FFBD
+    }
+
+    header nav ul a li {
+        background-color: #21295c;
+        transition: transform 0.3s ease;
+    }
+    
+    header nav ul a li:hover {
+        background-color: #21295c;
+        transform: scale(1.05);
+    }
+
+    footer ul {
+        flex-direction: row;
+        gap: 5rem;
+    }
+
+    #footer-logo-nav {
+        margin: 0 1rem;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .footer-logo {
+        width: 35%;
+        height: auto;
+    }
 }
