--- a/css/rooms.css
+++ b/css/rooms.css
@@ -218,7 +218,8 @@
 
     #activities-ad img {
         align-self: start;
-        height: 110%;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
     }
 
