--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -83,15 +83,15 @@
     #intro {
         gap: 1rem;
     }
-
+    
     #testimonial-container {
-        margin: 5rem 10rem;
+        margin: 5rem 5rem;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 5rem;
         align-items: stretch;
     }
-
+    
     .testimonial {
         margin: 0;
         display: grid;
@@ -106,19 +106,25 @@
         grid-template-rows: auto 1fr;
         height: 100%;
     }
-
+    
     .testimonial figcaption p {
         margin: 0;
         height: 100%;
     }
-
+    
     .testimonial:nth-child(5) {
         order: 6;
     }
-
+    
     #leave-review {
         align-self: center;
         padding: 0;
         order: 5;
+    }
+}
+
+@media only screen and (min-width: 1500px) {
+    #testimonial-container {
+        margin: 5rem 15rem;
     }
 }
