--- a/css/rooms.css
+++ b/css/rooms.css
@@ -176,6 +176,11 @@
 }
 
 @media only screen and (min-width: 1365px) {
+
+    #intro ul {
+        display: none;
+    }
+
     #large-room-container {
         grid-template-columns: 1fr 1fr 1fr;
         gap: 1rem;
