--- a/css/dining.css
+++ b/css/dining.css
@@ -24,7 +24,6 @@
     color: #fff7f7;
 }
 
-
 #intro {
     display: grid;
     grid-template-columns: 1fr;
@@ -90,7 +89,7 @@
     border-radius: 10rem;
 }
 
-#dining-container {
+.dining-container {
     margin: 1rem;
     display: grid;
     grid-template-columns: 1fr;
@@ -105,6 +104,7 @@
 
 .restaurant img{
     width: 100%;
+    border-radius: 1rem 1rem 0 0;
 }
 
 .cuisine-tags,
@@ -163,9 +163,101 @@
     border-radius: 10rem;
 }
 
-@media only screen and (min-width: 768px) {
+#other-options-container {
+    margin: 5rem 1rem;
+}
+
+@media only screen and (min-width: 615px) {
+    
+    #tags-list {
+        flex-direction: row;
+        justify-content: center;
+        gap: 1rem;
+    }
+}
+    @media only screen and (min-width: 768px) {
     
     .hero img {
         max-width: 15%;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+
+    h4 {
+        margin: 0 1rem;
+    }
+    
+    .dining-container {
+        gap: 5rem;
+    }
+
+    .restaurant {
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        grid-auto-rows: 1fr;
+    }
+
+    .restaurant figcaption h3 {
+        margin: 1rem;
+    }
+    .restaurant figcaption p {
+        margin: 1rem;
+    }
+    .restaurant figcaption ul {
+        margin: 1rem;
+    }
+
+    .restaurant figcaption a button {
+        border-radius: 0 0 0 1rem;
+    }
+
+    .restaurant img {
+        padding-bottom: 0;
+        order: 1;
+        width: 100%;
+        height: 100%;
+        border-radius: 0 1rem 1rem 0;
+        object-fit: cover;
+    }
+
+    #poolside-cafe img {
+        object-position: 10% 90%;
+    }
+
+    #other-options-container figure {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 0;
+    }
+
+}
+
+@media only screen and (min-width: 1125px) {
+    #intro {
+        gap: 1rem;
+    }
+    
+    #intro ul {
+        grid-template-columns: repeat(5, 1fr);
+        grid-auto-rows: 1fr;
+    }
+
+    #intro ul a li {
+        padding: 1rem;
+        height: 100%;
+        display: grid;
+        align-items: center;
+    }
+}
+
+@media only screen and (min-width: 1500px) {
+    
+    .dining-container {
+        margin: 0 5rem;
+    }
+
+    #other-options-container {
+        margin: 5rem 25rem 5rem 25rem;
     }
 }
