--- a/css/rooms.css
+++ b/css/rooms.css
@@ -131,8 +131,11 @@
         grid-template-columns: 1fr 1fr;
         align-items: center;
         grid-auto-rows: 1fr;
-        border: 4px solid #21295c;
         border-radius: 1.3rem;
+    }
+
+    .rooms {
+        background-color: #faeeee;
     }
 
     .rooms figcaption h3 {
@@ -182,14 +185,17 @@
     }
 
     #large-room-container {
+        height: 100%;
         grid-template-columns: 1fr 1fr 1fr;
-        gap: 1rem;
+        gap: 2rem;
     }
 
     .rooms {
         height: auto;
+        border: none;
+        display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 3fr;
+        grid-template-rows: auto 2fr;
         align-items: end;
         gap: 0;
     }
@@ -199,12 +205,14 @@
         width: 100%;
         order: -1;
         border-radius: 1rem 1rem 0 0;
+        align-self: start;
     }
 
     .rooms figcaption {
         height: 100%;
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 2fr;
+        align-self: start;
     }
 
     .rooms figcaption a {
@@ -218,17 +226,19 @@
 
     #activities-ad {
         display: grid;
-        height: 55%;
+        height: 60%;
     }
 
     #activities-ad img {
+        margin: 0;
+        aspect-ratio: 16 / 7.5;
         align-self: start;
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 
-    #activities-ad figcaption h3 {
-        padding-top: 1rem;
+    #activities-ad figcaption {
+        margin: 0;
     }
 }
