--- a/css/activities.css
+++ b/css/activities.css
@@ -81,6 +81,7 @@ h3 {
 }    
 
 .list-item img {
+    aspect-ratio: 5 / 3;
     width: 100%;
     padding-bottom: 1rem;
     order: -1;
@@ -186,10 +187,17 @@ h3 {
     }
 
     .list-item {
+        margin: 0 5rem;
         grid-template-columns: 2fr 1fr;
         align-items: center;
         grid-auto-rows: 1fr;
         border-radius: 1.3rem;
+        background-color: #faeeee;
+    }
+
+    .list-item figcaption {
+        padding-left: 1rem;
+        padding-right: 5rem;
     }
 
     .list-item figcaption h4 {
@@ -207,7 +215,7 @@ h3 {
 
 }
 
-@media only screen and (min-width: 1365px) {
+@media only screen and (min-width: 1640px) {
 
     #lc-relax,
     #lc-natural {
@@ -248,6 +256,7 @@ h3 {
     }
 
     .list-item {
+        margin: 0 1rem;
         height: auto;
         grid-template-columns: 1fr;
         grid-template-rows: auto 1fr auto;
@@ -266,6 +275,7 @@ h3 {
         height: 100%;
         display: grid;
         grid-template-columns: 1fr;
+        grid-template-rows: 0.5fr 0.5fr 0.5fr;
     }
 
     .tags {
